z-index correction

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ h6 {
   top: 75px;
   left: 0;
   right: 0;
+  z-index: 10;
 }
 
 .header__logo {
